--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <body>
 
   <div id="logo">
-    <h2>DayTrippr</h2>
-    <!-- <img src="images/daytrippr-logo.png" alt="image"> -->
+    <h2>
+      <img src="images/bee.png" alt="bee-image" id="bee-image"> BeeBettr</h2>
   </div>
 
   <!--Main Button-->
   <div class="valign-wrapper" id="start-button">
-    <button onclick="$('#modal1').modal('open')" data-target="modal1" class="waves-effect waves-light btn modal-trigger btn-large center-align hoverable">Plan A
-      <br>Perfect Day
-      <i class="material-icons">near_me</i>
+    <button onclick="$('#modal1').modal('open')" data-target="modal1" class="waves-effect waves-light btn modal-trigger btn-large center-align hoverable">help your community,
+      <br>change yourself
+      <i class="material-icons">event</i>
     </button>
   </div>
 
@@ -93,217 +93,62 @@
           </ul>
         </div>
       </nav>
-      <!-- Navbar ends here -->
+    </header>
+    <!-- Navbar ends here -->
 
 
-      <main>
-        <div class="wrapper">
-          <!-- Beginning of .page-wrapper -->
-          <div class="row">
-            <!-- Main Content Starts Here -->
+    <main>
+      <div class="wrapper">
+        <!-- Beginning of .page-wrapper -->
+        <div class="row">
+          <!-- Main Content Starts Here -->
 
-            <div class="col s4">
-              <!-- First Column; Free-ish Events -->
-              <div class="collection with-header" id="free">
-                <!-- Modal Trigger -->
-                <!-- <button onclick="$('#modal2').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button> -->
+          <div class="col s12">
+            <!-- First Column; Free-ish Events -->
+            <div class="collection with-header" id="event-div">
+              <!-- Modal Trigger -->
+              <!-- <button onclick="$('#modal2').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button> -->
 
-                <!-- Modal Structure -->
-                <div id="modal2" class="modal">
-                  <div class="modal-content" id="modal2content">
-                    <ul class="collection">
-                      <li class="collection-header">
-                        <h4>An Event!</h4>
-                      </li>
-                      <li class="collection-item avatar">
-                        <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
-                        <span class="title"></span>
-                        <p>Cost
-                          <br> Place/Time
-                        </p>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
+              <!-- Modal Structure -->
+              <div id="modal2" class="modal">
+                <div class="modal-content" id="modal2content">
+                  <div class="collection">
+                    
+                      <h4 class="collection-header"id="modal-event-title"></h4>
+                      <img class="collection-item avatar" id="modal-event-image" src="images/pexels-photo-196652.jpg" alt="image" class="circle">
+                      <span id="modal-event-description"></span>
+                      <span id="modal-event-address"></span>
+                    
                   </div>
                 </div>
-
-                <!-- <li class="collection-header"><h4>$-$$</h4></li>
-            <li class="collection-item avatar">
-              <img src="images/yuna.jpg" alt="image" class="circle">
-              <span class="title"></span>
-              <p>Cost <br>
-                 Place/Time
-              </p>
-            </li>
-            <li class="collection-item avatar">
-               <i class="material-icons circle black">event</i>
-              <span class="title"></span>
-              <p>Cost <br>
-                 Place/Time
-              </p>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle black">event</i>
-              <span class="title"></span>
-              <p>Cost <br>
-                 Place/Time
-              </p>
-            </li>
-            <li class="collection-item avatar">
-              <i class="material-icons circle black">event</i>
-              <span class="title">Event</span>
-              <p>Cost <br>
-                 Place/Time
-              </p>
-            </li>-->
-              </ul>
-            </div>
-
-            <div class="col s4">
-              <!-- Second Column; Affordable Events -->
-              <ul class="collection with-header" id="cheap">
-
-                <!-- Modal Trigger -->
-                <button onclick="$('#modal3').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
-
-                <!-- Modal Structure -->
-                <div class="modal">
-                  <div class="modal-content" id="modal3content">
-                    <ul class="collection">
-                      <li class="collection-header">
-                        <h4>An Event!</h4>
-                      </li>
-                      <li class="collection-item avatar">
-                        <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
-                        <span class="title"></span>
-                        <p>Cost
-                          <br> Place/Time
-                        </p>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
-                  </div>
-                </div>
-                <!--        <li class="collection-header"><h4>$$-$$$</h4></li>
-          <li class="collection-item avatar">
-            <img src="images/yuna.jpg" alt="image" class="circle">
-            <span class="title">Event</span>
-            <p>Cost <br>
-               Place/Time
-            </p>
-          </li>
-          <li class="collection-item avatar">
-             <i class="material-icons circle black">event</i>
-            <span class="title">Event</span>
-            <p>Cost <br>
-               Place/Time
-            </p>
-          </li>
-          <li class="collection-item avatar">
-              <i class="material-icons circle black">event</i>
-            <span class="title">Event</span>
-            <p>Cost <br>
-               Place/Time
-            </p>
-          </li>
-          <li class="collection-item avatar">
-            <i class="material-icons circle black">event</i>
-            <span class="title">Event</span>
-            <p>Cost <br>
-               Place/Time
-            </p>>
-          </li> -->
-              </ul>
-            </div>
-
-            <div class="col s4">
-              <!-- Third Column; Pricey Events -->
-              <ul class="collection with-header" id="pricey">
-
-                <!-- Modal Trigger -->
-                <button onclick="$('#modal4').modal('open')" data-target="modal2" class="btn-hidden modal-trigger"></button>
-
-                <!-- Modal Structure -->
-                <div class="modal">
-                  <div class="modal-content" id="modal4content">
-                    <ul>
-                      <li class="collection-header">
-                        <h4>An Event!</h4>
-                      </li>
-                      <li class="collection-item avatar">
-                        <img src="images/pexels-photo-196652.jpg" alt="image" class="circle">
-                        <span class="title"></span>
-                        <p>Cost
-                          <br> Place/Time
-                        </p>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
-                  </div>
-                </div>
-
-                <!--         <li class="collection-header"><h4>$$$-$$$$</h4></li>
-            <li class="collection-item avatar">
-              <img src="images/yuna.jpg" alt="image" class="circle">
-              <span class="title">Event</span>
-              <p>Cost <br>
-                 Place/Time
-              </p>
-            </li>
-            <li class="collection-item avatar">
-               <i class="material-icons circle black">event</i>
-              <span class="title">Event</span>
-              <p>Cost <br>
-                 Place/Time
-              </p>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle black">event</i>
-              <span class="title">Event</span>
-              <p>Cost <br>
-                 Place/Time
-              </p>>
-            </li>
-            <li class="collection-item avatar">
-              <i class="material-icons circle black">event</i>
-              <span class="title">Event</span>
-              <p>Cost <br>
-                 Place/Time
-              </p>
-  
-            </li> -->
-              </ul>
-            </div>
-
-          </div>
-        </div>
-        <!-- End of .container -->
-      </main>
-
-      <div id="your-day">
-        <footer class="page-footer">
-          <!-- Footer Starts Here -->
-
-
-          <div class="container">
-            <div class="row">
-              <div class="col l12 s12">
-                <div id="footerText">
-                  <h5 class="white-text left-align">Your Day</h5>
-                  <div class="divider white"></div>
-                  <ul id="events" class="collection"></ul>
+                <div class="modal-footer">
+                  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat add-event">Add Event</a>
                 </div>
               </div>
             </div>
           </div>
-        </footer>
+        </div>
       </div>
+      <!-- End of .container -->
+    </main>
+
+    <footer class="page-footer">
+      <!-- Footer Starts Here -->
+
+
+      <div class="container">
+        <div class="row">
+          <div class="col l12 s12">
+            <div id="footerText">
+              <h5 class="white-text left-align">Your Day</h5>
+              <div class="divider white"></div>
+              <ul id="events" class="collection"></ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
   </div>
 
 
